--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@openzeppelin/contracts": "3.4",
     "chai": "^4.3.6",
     "dotenv": "^16.0.0",
+    "ethers": "^5.6.1",
     "truffle": "^5.5.5"
   }
 }
